objects/ICD_Diagnosis_In__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ICD Diagnosis</relationshipLabel>
        <relationshipName>ICD_Diagnosis_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Code__c</fullName>
        <formula>ICD_Diagnosis__r.DIAGNOSIS_CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diagnosis Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Indicator__c</fullName>
        <formula>ICD_Diagnosis__r.Group_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICD_Diagnosis__c</fullName>
        <label>ICD Diagnosis</label>
        <referenceTo>ICD_Diagnosis__c</referenceTo>
        <relationshipLabel>ICD Diagnosis Informations</relationshipLabel>
        <relationshipName>ICD_Diagnosis_Informations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <formula>ICD_Diagnosis__r.Long_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <formula>ICD_Diagnosis__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Diagnosis__c</fullName>
        <formula>Text(ICD_Diagnosis__r.Type_Of_Diagnosis__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Diagnosis</label>
        <type>Text</type>
    </fields>
    <label>ICD Diagnosis Information</label>
    <nameField>
        <displayFormat>ICD INFO-{000000}</displayFormat>
        <label>ICD Diagnosis Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICD Diagnosis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>